Backend/TacticParser.java
/* Generated By:JavaCC: Do not edit this line. TacticParser.java */
import java.util.*;
import java.io.*;

public class TacticParser implements TacticParserConstants {

    private static List<String[]> events = new ArrayList<String[]>(); // [CALLER, METHOD, CALLEE]
    private static int tacticCount = 0;

    private static boolean check = true;
    private static boolean check1 = true;

    public static void main(String[] args) throws Exception {
        try {
            System.out.println("\n==========================================================================================");
            System.out.println("                   TACTIC DETECTION SYSTEM INITIALIZED  ");
            System.out.println("==========================================================================================\n");
 Scanner scanner = new Scanner(System.in);
            StringBuilder inputBuilder = new StringBuilder();

            while (scanner.hasNextLine()) {
                String line = scanner.nextLine();
                inputBuilder.append(line).append("\n");
          }
            scanner.close();
            String traceInput = inputBuilder.toString();
            TacticParser parser = new TacticParser(new java.io.StringReader(traceInput));
            System.out.println("                      <----  Tactic structure ----> : ");
            System.out.println("\n TraceClient: Client--METHOD-->TraceClient: Client ");
            System.out.println("\n TraceClient: Client--METHOD-->TraceAuthenticator: Authenticator ");
            System.out.println("\n TraceAuthenticator: Authenticator--METHOD-->TraceAuthenticator: Authenticator ");
          System.out.println("\n TraceAuthenticator: Authenticator--METHOD-->TraceAuthenticator: Authenticator ");
            parser.Trace();

            detectTactic();


          System.out.println("\n==========================================================================================");
            System.out.println("                      ANALYSIS SUMMARY");

            System.out.println(" Total AuthenticateID/Password Tactic occurrences detected: " + tacticCount);
            System.out.println("==========================================================================================\n");

        } catch (Exception e) {
            System.out.println("Erreur de parsing : " + e.getMessage());
            e.printStackTrace();
        }
    }

    private static void detectTactic() {
        System.out.println("Detecting ID/Password tactics in the trace...\n");

        for (int i = 0; i <= events.size() - 4; ) {
            String[] e1 = events.get(i);
            String[] e2 = events.get(i + 1);
            String[] e3 = events.get(i + 2);
            String[] e4 = events.get(i + 3);

            boolean match =
                e1[0].equals(e1[2]) &&                // appel local du client (encrypt)
                e2[0].equals(e1[0]) &&                // même client appelle Authenticator
                e2[2].equals(e3[0]) &&                // Authenticator continue les appels
                e3[0].equals(e4[0]) &&
                !e2[2].equals(e1[0]) &&
                e2[2].equals(e3[2]) &&           // suite de traitement dans Authenticator
                e3[0].equals(e4[2]);                  // appel local dans Authenticator

            if (match) {
System.out.println("\n==========================================================================================");
                System.out.println("                  Tactic detected at line " + i);
                System.out.println("------------------------------------------------------------------------------------------");

                 System.out.println(i + " | " + e1[0] + ":Client -- " + e1[1] + " --> " + e1[2] + ":Client");
                System.out.println((i+1) + " | " + e2[0] + ":Client -- " + e2[1] + " --> " + e2[2] + ":Authenticator");
                System.out.println((i+2) + " | " + e3[0] + ":Authenticator -- " + e3[1] + " --> " + e3[2] + ":Authenticator");
                System.out.println((i+3) + " | " + e4[0] + ":Authenticator -- " + e4[1] + " --> " + e4[2] + ":Authenticator");


                System.out.println("==========================================================================================\n");


                tacticCount++;
                i += 4;
            } else {
                System.out.println("X Invalid line detected at index " + i + ", continuing with the analysis...");
                System.out.println("------------------------------------------------------------------------------------------\n");
                i++;
            }
        }
    }

  static final public void Trace() throws ParseException {
    System.out.println(" \n Analyzing trace...\n");
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CALLER:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      Event();
    }
  }

  static final public void Event() throws ParseException {
  Token caller, method, callee;
    jj_consume_token(CALLER);
    caller = jj_consume_token(IDENTIFIER);
    jj_consume_token(COMMA);
    jj_consume_token(METHOD);
    method = jj_consume_token(IDENTIFIER);
    jj_consume_token(COMMA);
    jj_consume_token(CALLEE);
    callee = jj_consume_token(IDENTIFIER);
    jj_consume_token(SEMICOLON);
        events.add(new String[]{caller.image, method.image, callee.image});
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public TacticParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[1];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x20,};
   }

  /** Constructor with InputStream. */
  public TacticParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public TacticParser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new TacticParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public TacticParser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new TacticParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public TacticParser(TacticParserTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(TacticParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List jj_expentries = new java.util.ArrayList();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[11];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 1; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 11; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
